# codeguard

./: README.md  pyproject.toml
src/codeguard/: __init__.py  checker.py  cli.py  exceptions.py  module.py
